--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
+    "react-linkedin-login-oauth2": "^2.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
